# gatekeeper

./: .dockerignore  .env.example  .gatekeeper.yml  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  gatekeeper.yml
app/: __init__.py  cli.py  config.py  insecure_demo.py  lambda_handler.py  llm.py  main.py  models.py  policy.py
app/agents/: fix_suggest.py  graph.py  security.py  summarizer.py  triage.py
app/github/: auth.py  checks.py  repo.py  webhook.py  worker.py
app/sonar/: client.py
samples/: sonar_issues.json
scripts/: run_local.py
terraform/: backend.hcl.example  github_oidc.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_cli.py  test_github.py  test_graph.py  test_lambda.py  test_policy.py  test_sonar.py
