[project]
name = "gatekeeper"
version = "0.1.0"
description = "AI-powered code-quality gate for pull requests: SonarQube findings triaged by a LangGraph multi-agent system behind FastAPI."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
